# example_cmake

./: CMakeLists.txt  README.md  tests.cpp
.github/workflows/: cmake-single-platform.yml
